[tool.poetry]
name = "medbot"
version = "0.1.0"
description = ""
authors = ["NeonKazuha <tanudeshtd2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
python-dotenv = "^1.0.1"
langchain = "0.3.3"
langchain-mistralai = "0.2.0"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
pdf2image = "^1.17.0"
pydantic = "^2.6.1"
requests = "^2.31.0"
mistralai = "^1.1.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
